<resources>
    <string name="app_name">BusinessCard</string>
    <string name="txt_title">Cartão de Visita</string>
    <string name="txt_fab_description">floating_action_button</string>
    <string name="txt_new_card">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_company">Empresa</string>
    <string name="label_color">Cor</string>
    <string name="txt_confirm">confirmar</string>
    <string name="label_show_sucess">Cartao cadastrado com sucesso</string>
    <string name="label_share">Compartilhar</string>
</resources>